# mailgun-cli

./: .gitignore  LICENSE  README.md  pyproject.toml
mailgun_cli/: __init__.py  cli.py  forward.py  mailgun.py
tests/: test_mailgun_cli.py
