[tool.poetry]
name = "mailgun-cli"
version = "0.1.5"
description = "control mailgun account using cli and python api"
authors = ["Nutchanon Ninyawee  <dev@nutchanon.org>"]

readme = 'README.md'

repository = "https://github.com/sdispater/poetry"
homepage = "https://github.com/sdispater/poetry"

keywords = ['forward', 'mail', 'mailgun', 'cli']

[tool.poetry.scripts]
mailgun = 'mailgun_cli.cli:main'

[tool.poetry.dependencies]
python = "^3.7"
uplink = "^0.8.0"
click = "^7.0"
pandas = "^0.24.1"
tqdm = "^4.31"
loguru = "^0.2.5"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
